# apicius

./: .gitignore  README.md  apicius.cabal  apicus.cabal
Apicius/: AST.hs  Language.hs  Lexer.x  Parser.y  ReverseTree.hs  Util.hs
Apicius/Render/: Dot.hs
samples/: egg-curry.apicus  eggplant-rougail.apicus  soondubu-jigae.apicus
src/: AST.hs  BuildTree.hs  Lexer.x  Main.hs  Parser.y  Util.hs
