name:             apicius
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2016 Getty Ritter
category:         Cookery
build-type:       Simple
cabal-version:    >= 1.12

library
  exposed-modules:     Apicius.Language,
                       Apicius.ReverseTree,
                       Apicius.Render.Dot
  other-modules:       Apicius.AST,
                       Apicius.Lexer,
                       Apicius.Parser,
                       Apicius.Util
  build-depends:       base >=4.7 && <4.9,
                       text,
                       text-format,
                       array
  build-tools:         happy, alex
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  default-language:    Haskell2010

executable apicius
  hs-source-dirs:      src
  main-is:             Main.hs
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9,
                       apicius,
                       text,
                       errors
  default-language:    Haskell2010
